playbooks/yaml/argocd-apps/nginx/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-tailscale
  namespace: ingress-nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.soyspray.vip"
    external-dns.alpha.kubernetes.io/ttl: "300"
    external-dns/owner-id: "tailscale"
    external-dns/resource-policy: "sync"
  labels:
    app.kubernetes.io/instance: tailscale-operator
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
