playbooks/yaml/argocd-apps/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    tailscale.com/funnel: "true"
  labels:
    app.kubernetes.io/instance: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.soyspray.vip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - nginx.soyspray.vip
    secretName: nginx-tls
